--- a/demo/AndroidManifest.xml
+++ b/demo/AndroidManifest.xml
@@ -35,15 +35,17 @@
             android:value="AIzaSyDCa5WRSMk3CrNSf3y5xbyQTvp1_zwuTtE" />
 
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:name=".splash"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Black.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".GeoJsonDemoActivity" />
+        <activity android:name=".GeoJsonDemoActivity"
+            android:theme="@android:style/Theme.Black.NoTitleBar"   />
         <activity
             android:name=".CaptureImageActivity"
             android:label="@string/title_activity_capture_image" />
@@ -52,7 +54,10 @@
             android:label="@string/title_activity_video" />
         <activity
             android:name=".TrenchSurveyActivity"
-            android:label="@string/title_activity_trench_survey"></activity>
+            android:label="@string/title_activity_trench_survey" />
+        <activity
+            android:name=".MainActivity"
+            android:label="Field Survey"/>
     </application>
 
 </manifest>
