--- a/demo/AndroidManifest.xml
+++ b/demo/AndroidManifest.xml
@@ -26,7 +26,7 @@
         android:allowBackup="false"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/LightThemeSelector">
+        android:theme="@style/MyMaterialTheme.Base">
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -54,7 +54,7 @@
             android:label="@string/title_activity_trench_survey" />
         <activity
             android:name=".MainActivity"
-            android:label="Field Survey"/>
+            android:label="INFA"/>
     </application>
 
 </manifest>
