--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -9,6 +9,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-location:9.8.0'
     compile 'com.google.android.gms:play-services-base:9.8.0'
     compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:support-v4:24.2.1'
 }
 
 android {
@@ -16,7 +17,7 @@ android {
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        minSdkVersion 14
+        minSdkVersion 21
         targetSdkVersion 22
     }
 
