--- a/demo/AndroidManifest.xml
+++ b/demo/AndroidManifest.xml
@@ -55,14 +55,16 @@
             android:label="@string/title_activity_trench_survey" />
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="portrait"
-            android:label="INFA" />
+            android:label="INFA"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".PitSurveyActivity"
             android:label="INFA" />
         <activity android:name=".ConstructionActivity" />
         <activity android:name=".MaintenanceActivity" />
-        <activity android:name=".AlternateDucts"></activity>
+        <activity android:name=".AlternateDucts" />
+        <activity android:name=".CaptureImagePit" />
+        <activity android:name=".AlternatePits"></activity>
     </application>
 
 </manifest>
