--- a/demo/AndroidManifest.xml
+++ b/demo/AndroidManifest.xml
@@ -35,7 +35,7 @@
             android:value="AIzaSyDCa5WRSMk3CrNSf3y5xbyQTvp1_zwuTtE" />
 
         <activity
-            android:name=".splash"
+            android:name="com.google.maps.android.utils.activity.splash"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Black.NoTitleBar">
             <intent-filter>
@@ -45,27 +45,27 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".SurveyActivity"
+            android:name="com.google.maps.android.utils.activity.SurveyActivity"
             android:theme="@android:style/Theme.Black.NoTitleBar" />
         <activity
-            android:name=".CaptureImageActivity"
+            android:name="com.google.maps.android.utils.activity.CaptureImageActivity"
             android:label="@string/title_activity_capture_image" />
         <activity
-            android:name=".TrenchSurveyActivity"
+            android:name="com.google.maps.android.utils.activity.TrenchSurveyActivity"
             android:label="@string/title_activity_trench_survey" />
         <activity
-            android:name=".MainActivity"
+            android:name="com.google.maps.android.utils.activity.MainActivity"
             android:label="INFA"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".PitSurveyActivity"
+            android:name="com.google.maps.android.utils.activity.PitSurveyActivity"
             android:label="INFA" />
-        <activity android:name=".ConstructionActivity" />
-        <activity android:name=".FaultRemediationActivity" />
-        <activity android:name=".AlternateDucts" />
-        <activity android:name=".CaptureImagePit" />
-        <activity android:name=".AlternatePits" />
-        <activity android:name=".EquipmentUpkeep"></activity>
+        <activity android:name="com.google.maps.android.utils.activity.ConstructionActivity" />
+        <activity android:name="com.google.maps.android.utils.activity.FaultRemediationActivity" />
+        <activity android:name="com.google.maps.android.utils.activity.AlternateDucts" />
+        <activity android:name="com.google.maps.android.utils.activity.CaptureImagePit" />
+        <activity android:name="com.google.maps.android.utils.activity.AlternatePits" />
+        <activity android:name="com.google.maps.android.utils.activity.EquipmentUpkeep"></activity>
     </application>
 
 </manifest>
