--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-base:9.8.0'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:support-v4:24.2.1'
+    compile 'com.android.support:recyclerview-v7:22.2.1'
 }
 
 android {
