added camera functionality for alternate ducts

--- a/demo/AndroidManifest.xml
+++ b/demo/AndroidManifest.xml
@@ -65,7 +65,8 @@
         <activity android:name="com.google.maps.android.utils.activity.AlternateDucts" />
         <activity android:name="com.google.maps.android.utils.activity.CaptureImagePit" />
         <activity android:name="com.google.maps.android.utils.activity.AlternatePits" />
-        <activity android:name="com.google.maps.android.utils.activity.EquipmentUpkeep"></activity>
+        <activity android:name="com.google.maps.android.utils.activity.EquipmentUpkeep" />
+        <activity android:name="com.google.maps.android.utils.activity.ShowPhotos"></activity>
     </application>
 
 </manifest>
