--- a/demo/AndroidManifest.xml
+++ b/demo/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:name="com.google.maps.android.utils.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.Manifest.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="com.google.maps.android.utils.permission.MAPS_RECEIVE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -56,11 +57,11 @@
             android:label="@string/title_activity_trench_survey" />
         <activity
             android:name="com.google.maps.android.utils.activity.MainActivity"
-            android:label="INFA"
+            android:label="AI ’InTel’ Com"
             android:screenOrientation="portrait" />
         <activity
             android:name="com.google.maps.android.utils.activity.PitSurveyActivity"
-            android:label="INFA" />
+            android:label="AI ’InTel’ Com" />
         <activity android:name="com.google.maps.android.utils.activity.ConstructionActivity" />
         <activity android:name="com.google.maps.android.utils.activity.FaultRemediationActivity" />
         <activity android:name="com.google.maps.android.utils.activity.AlternateDucts" />
